<resources>
    <string name="app_name">Agenda Lite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Agenda lite</string>
    <string name="nav_header_subtitle">Beta 2.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Tareas</string>
    <string name="menu_gallery">Agregar Tarea</string>
    <string name="menu_slideshow">Notificaciones</string>
    <string name="menu_tools">Tareas Pasadas</string>
    <string name="menu_share">Configuracion</string>
    <string name="menu_send">Informacion</string>


    <string name="changed_to">Notificación cambiada a las %s</string>
    <string name="time_selected_is">La hora seleccionada es:</string>
    <string name="change_time">Cambia la hora</string>
    <string name="select_time">Selecciona la hora</string>
    <string name="new_notification">Nueva notificación</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
