<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tareas">

    <fragment
        android:id="@+id/nav_tareas"
        android:name="com.example.agenda.ui.tareas.TareasFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_tareas" />

    <fragment
        android:id="@+id/nav_nuevatarea"
        android:name="com.example.agenda.ui.nuevatarea.NuevaTareaFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_nueva_tarea" />

    <fragment
        android:id="@+id/nav_notificacion"
        android:name="com.example.agenda.ui.notificacion.NotificacionFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_notificacion" />
    <fragment
        android:id="@+id/action_TP"
        android:name="com.example.agenda.TareasPasadas"
        android:label="Tareas Pasadas"
        tools:layout="@layout/fragment_tareas_pasadas" />

    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.example.agenda.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_configuracion" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.agenda.ui.informacion.InfoFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_info" />
</navigation>